// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders info message when no items match search 1`] = `
<article
  class="sc-jTzLTM rEHqS sc-VigVT jMIXiq"
>
  <h1
    class="sc-jzJRlG iRtNhh sc-fjdhpX dFoqyJ"
  >
    Bolverk failed to find items for 
    <strong
      class="sc-gZMcBi dQOhQy"
    >
      xxx
    </strong>
  </h1>
</article>
`;

exports[`renders loaded item 1`] = `
<article
  class="sc-jTzLTM rEHqS sc-VigVT jMIXiq"
>
  <h1
    class="sc-jzJRlG iRtNhh sc-fjdhpX dFoqyJ"
  >
    Items found for 
    <strong
      class="sc-gZMcBi dQOhQy"
    >
      ale
    </strong>
  </h1>
  <ul
    class="sc-iwsKbI igizDg"
  >
    <li
      class="sc-bxivhb hjuVSK"
    >
      <img
        class="sc-bdVaJa hpZUqN"
        src="undefinedalettes-bracelet.png"
      />
      <p
        class="sc-EHOje RRuYV"
      >
        1
      </p>
    </li>
    <li
      class="sc-bxivhb hjuVSK"
    >
      <img
        class="sc-bdVaJa hpZUqN"
        src="undefinedwhalebone-needle.png"
      />
      <p
        class="sc-EHOje RRuYV"
      >
        1
      </p>
    </li>
  </ul>
</article>
`;

exports[`renders loading state initially 1`] = `
<article
  class="sc-jTzLTM rEHqS sc-VigVT jMIXiq"
/>
`;
